--- a/view/moduleOne.html
+++ b/view/moduleOne.html
@@ -35,29 +35,29 @@
         <div class="indicadores">
             <div class="title">
                 <h1>Maquina</h1>
-                <h1>Inicio</h1>
-                <h1>Duracion</h1>
+                <!--<h1>Inicio</h1>
+                <h1>Duracion</h1>-->
                 <h1>ON/OFF</h1>
                 <h1>Estado</h1>
             </div>
             <div>
                 <h1>OPE</h1>
-                <h1>--:--:--</h1>
-                <h1>--:--:--</h1>
+                <!--<h1>--:--:--</h1>
+                <h1>--:--:--</h1>-->
                 <h1 id="textOPE" class="indicadores__text"></h1>
                 <div><span id="ledOPE" class="indicadores__led"></span></div>
             </div>
             <div>
                 <h1>Bomba uno</h1>
-                <h1>--:--:--</h1>
-                <h1>--:--:--</h1>
+                <!--<h1>--:--:--</h1>
+                <h1>--:--:--</h1>-->
                 <h1 id="textBomba1" class="indicadores__text"></h1>
                 <div><span id="ledBomba1" class="indicadores__led"></span></div>
             </div>
             <div>
                 <h1>Bomba dos</h1>
-                <h1>--:--:--</h1>
-                <h1>--:--:--</h1>
+                <!--<h1>--:--:--</h1>
+                <h1>--:--:--</h1>-->
                 <h1 id="textBomba2" class="indicadores__text"></h1>
                 <div><span id="ledBomba2" class="indicadores__led"></span></div>
             </div>
