--- a/view/moduleTwo.html
+++ b/view/moduleTwo.html
@@ -9,11 +9,141 @@
     <link rel="shortcut icon" href="../img/iconoSiemens.ico">
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/interface.css">
+    <link rel="stylesheet" href="../css/moduleTwo.css">
 </head>
 <body>
     <header>
     </header>
     <main>
+        <div class="gauge">
+            <div class="scale">
+                <span>0 V</span>
+                <span>125 V</span>
+                <span>250 V</span>
+            </div>
+            <div class="line">
+                <span style="--i:1"></span>
+                <span style="--i:2"></span>
+                <span style="--i:3"></span>
+                <span style="--i:4"></span>
+                <span style="--i:5"></span>
+                <span style="--i:6"></span>
+                <span style="--i:7"></span>
+                <span style="--i:8"></span>
+                <span style="--i:9"></span>
+                <span style="--i:10"></span>
+                <span style="--i:11"></span>
+                <span style="--i:12"></span>
+                <span style="--i:13"></span>
+                <span style="--i:14"></span>
+                <span style="--i:15"></span>
+                <span style="--i:16"></span>
+                <span style="--i:17"></span>
+                <span style="--i:18"></span>
+                <span style="--i:19"></span>
+                <span style="--i:20"></span>
+            </div>
+            <div class="line__bottom"></div>
+            <div class="circle__bottom"></div>
+            <svg version="1.1" baseProfile="full" width="190" height="190" xmlns="http://www.w3.org/2000/svg">
+                <linearGradient id="gradient" x1="0" x2="1" y1="0" y2="0">
+                    <stop offset="0%" stop-color="#0f0"/>
+                    <stop offset="100%" stop-color="#f00"/>
+                </linearGradient>
+                <path id="svg_vPac" d="M5 95 A80 80 0 0 1 185 95" stroke=url(#gradient) fill="none" stroke-width="10" stroke-linecap="round" stroke-dasharray="0 282.78"/>
+            </svg>
+            <div class="circle__center">
+                <span class="name__gauge">Voltaje</span>
+                <span class="value__gauge" id="vPac">0</span>
+                <!--<img src="leaf.svg" alt="">-->
+            </div>
+        </div>
+        <div class="gauge">
+            <div class="scale">
+                <span>1 A</span>
+                <span>5 A</span>
+                <span>10 A</span>
+            </div>
+            <div class="line">
+                <span style="--i:1"></span>
+                <span style="--i:2"></span>
+                <span style="--i:3"></span>
+                <span style="--i:4"></span>
+                <span style="--i:5"></span>
+                <span style="--i:6"></span>
+                <span style="--i:7"></span>
+                <span style="--i:8"></span>
+                <span style="--i:9"></span>
+                <span style="--i:10"></span>
+                <span style="--i:11"></span>
+                <span style="--i:12"></span>
+                <span style="--i:13"></span>
+                <span style="--i:14"></span>
+                <span style="--i:15"></span>
+                <span style="--i:16"></span>
+                <span style="--i:17"></span>
+                <span style="--i:18"></span>
+                <span style="--i:19"></span>
+                <span style="--i:20"></span>
+            </div>
+            <div class="line__bottom"></div>
+            <div class="circle__bottom"></div>
+            <svg version="1.1" baseProfile="full" width="190" height="190" xmlns="http://www.w3.org/2000/svg">
+                <linearGradient id="gradient" x1="0" x2="1" y1="0" y2="0">
+                    <stop offset="0%" stop-color="#0f0"/>
+                    <stop offset="100%" stop-color="#f00"/>
+                </linearGradient>
+                <path id="svg_cPac" d="M5 95 A80 80 0 0 1 185 95" stroke=url(#gradient) fill="none" stroke-width="10" stroke-linecap="round" stroke-dasharray="0 282.78"/>
+            </svg>
+            <div class="circle__center">
+                <span class="name__gauge">Corriente</span>
+                <span class="value__gauge" id="cPac">0</span>
+                <!--<img src="leaf.svg" alt="">-->
+            </div>
+        </div>
+        <div class="gauge">
+            <div class="scale">
+                <span>0 Hz</span>
+                <span>30 Hz</span>
+                <span>60 Hz</span>
+            </div>
+            <div class="line">
+                <span style="--i:1"></span>
+                <span style="--i:2"></span>
+                <span style="--i:3"></span>
+                <span style="--i:4"></span>
+                <span style="--i:5"></span>
+                <span style="--i:6"></span>
+                <span style="--i:7"></span>
+                <span style="--i:8"></span>
+                <span style="--i:9"></span>
+                <span style="--i:10"></span>
+                <span style="--i:11"></span>
+                <span style="--i:12"></span>
+                <span style="--i:13"></span>
+                <span style="--i:14"></span>
+                <span style="--i:15"></span>
+                <span style="--i:16"></span>
+                <span style="--i:17"></span>
+                <span style="--i:18"></span>
+                <span style="--i:19"></span>
+                <span style="--i:20"></span>
+            </div>
+            <div class="line__bottom"></div>
+            <div class="circle__bottom"></div>
+            <svg version="1.1" baseProfile="full" width="190" height="190" xmlns="http://www.w3.org/2000/svg">
+                <linearGradient id="gradient" x1="0" x2="1" y1="0" y2="0">
+                    <stop offset="0%" stop-color="#0f0"/>
+                    <stop offset="100%" stop-color="#f00"/>
+                </linearGradient>
+                <path id="svg_fPac" d="M5 95 A80 80 0 0 1 185 95" stroke=url(#gradient) fill="none" stroke-width="10" stroke-linecap="round" stroke-dasharray="0 282.78"/>
+            </svg>
+            <div class="circle__center">
+                <span class="name__gauge">Frecuencia</span>
+                <span class="value__gauge" id="fPac">0</span>
+                <!--<img src="leaf.svg" alt="">-->
+            </div>
+        </div>
     </main>
     <footer>
     </footer>
