--- a/view/historical.html
+++ b/view/historical.html
@@ -74,5 +74,6 @@
 </body>
 <script src="scripts/interface.js"></script>
 <script src="scripts/historical.js"></script>
+<script src="./scripts/filesaver.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.2/xlsx.full.min.js"></script>
 </html>
