--- a/view/loginUp.html
+++ b/view/loginUp.html
@@ -4,7 +4,7 @@
     <title>Inicia sesión</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/iconoSiemens.ico">
+    <link rel="shortcut icon" href="../img/iconoSMSIC.jpg">
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/loginUp.css">
 </head>
