--- a/view/users.html
+++ b/view/users.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../view/scripts/loggedIn.js"></script>
-    <link rel="shortcut icon" href="../img/iconoSiemens.ico">
+    <link rel="shortcut icon" href="../img/iconoSMSIC.jpg">
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/interface.css">
     <link rel="stylesheet" href="../css/users.css">
