--- a/css/historical.css
+++ b/css/historical.css
@@ -1,6 +1,7 @@
 body{
 	display: grid;
     grid-template-rows: 6.5rem 1fr;
+	background-color: var(--color-background-body);
 }
 main{
 	padding: .5rem;
