--- a/css/interface.css
+++ b/css/interface.css
@@ -1,23 +1,20 @@
-body{
-    background-color: var(--color-background-body);
-    display: grid;
-    grid-template-rows: 6.5rem 1fr 4rem;
-}
 /*header*/
 header{
     display: grid;
-    grid-template-columns: 19rem 1fr;
+    grid-template-rows: 3rem 3.5rem;
 }
-.header__left {
+/*.logo{
     background-image: url(../img/logoSMS.png);
+    
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-}
-.header__right{
+}*/
+
+/*.header__right{
     display: grid;
     grid-template-rows: 3rem 3.5rem;
-}
+}*/
 .header__top{
     width: 100%;
     background-color: var(--color-background-head);
@@ -41,6 +38,18 @@ header{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
+}
+.header__bottom .logo{
+    width: 20rem;
+    height: 3.5rem;
+    /*background-image: url(../img/logoSMS.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;*/
+}
+.header__bottom .logo img{
+
+    height: 100%;
 }
 .header__bottom .key{
     color: var(--color-font-gray);
