--- a/css/moduleTwo.css
+++ b/css/moduleTwo.css
@@ -1,3 +1,8 @@
+body{
+    background-color: var(--color-background-body);
+    display: grid;
+    grid-template-rows: 6.5rem 1fr 4rem;
+}
 main{
     background-color: var(--color-white);
     margin: .5rem;
