--- a/view/trends.html
+++ b/view/trends.html
@@ -6,17 +6,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../view/scripts/loggedIn.js"></script>
-    <link rel="shortcut icon" href="../img/iconoSiemens.ico">
+    <link rel="shortcut icon" href="../img/iconoSMSIC.jpg">
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/interface.css">
+    <link rel="stylesheet" href="../css/trends.css">
 </head>
 <body>
     <header>
     </header>
     <main>
+        <div class="container__chart">
+            <div class="chart__body">
+                <canvas id="chart" class="body__canvas"></canvas>
+            </div>
+        </div>
+        <div></div>
     </main>
     <div class="sideBar">
     </div>
 </body>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 <script src="scripts/interface.js"></script>
+<script src="scripts/trends.js"></script>
 </html>
